--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@babel/runtime": "7.14.6",
     "@material-ui/core": "4.12.1",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/react": "17.0.14",
     "firebase": "8.7.1",
     "react": "17.0.2",
